--- a/.github/workflows/trace-demo-build-deploy.yml
+++ b/.github/workflows/trace-demo-build-deploy.yml
@@ -8,6 +8,9 @@ on:
       - opened
       - synchronize
       - reopened
+  push:
+    branches:
+      - main
 
 jobs:
     docker-build-and-push:
