--- a/apps/trace-demo/kustomize/overlays/dev/patches.yaml
+++ b/apps/trace-demo/kustomize/overlays/dev/patches.yaml
@@ -7,25 +7,21 @@ spec:
   template:
     spec:
       containers:
-      - name: trace-demo
-        env:
-        - name: ENV
-          value: "dev"
+        - name: trace-demo
+          env:
+            - name: ENV
+              value: "dev"
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: trace-demo
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: "dev.trace-demo.fullstack.pw"
 spec:
-  ingressClassName: traefik
+  tls:
+    - hosts:
+        - "dev.trace-demo.fullstack.pw"
+      secretName: trace-demo-tls
   rules:
-  - host: dev.trace-demo.fullstack.pw
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: trace-demo
-            port:
-              number: 8080
+    - host: dev.trace-demo.fullstack.pw
