--- a/apps/trace-demo/kustomize/base/deployment.yaml
+++ b/apps/trace-demo/kustomize/base/deployment.yaml
@@ -13,17 +13,45 @@ spec:
         app: trace-demo
     spec:
       containers:
-      - name: trace-demo
-        image: registry.fullstack.pw/trace-demo:latest
-        ports:
-        - containerPort: 8080
-        env:
-        - name: OTEL_EXPORTER_OTLP_ENDPOINT
-          value: opentelemetry-collector.observability.svc.cluster.local:4317
-        resources:
-          limits:
-            cpu: 200m
-            memory: 256Mi
-          requests:
-            cpu: 100m
-            memory: 128Mi
+        - name: trace-demo
+          image: registry.fullstack.pw/trace-demo:latest
+          ports:
+            - containerPort: 8080
+          env:
+            - name: OTEL_EXPORTER_OTLP_ENDPOINT
+              value: opentelemetry-collector.observability.svc.cluster.local:4317
+            - name: DB_HOST
+              value: postgres.default.svc.cluster.local
+            - name: DB_PORT
+              value: "5432"
+            - name: DB_NAME
+              value: postgres
+            - name: DB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-credentials
+                  key: username
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-credentials
+                  key: password
+          resources:
+            limits:
+              cpu: 200m
+              memory: 256Mi
+            requests:
+              cpu: 100m
+              memory: 128Mi
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 15
+            periodSeconds: 20
