--- a/apps/trace-demo/kustomize/base/deployment.yaml
+++ b/apps/trace-demo/kustomize/base/deployment.yaml
@@ -12,6 +12,27 @@ spec:
       labels:
         app: trace-demo
     spec:
+      initContainers:
+        - name: check-db-ready
+          image: postgres:15-alpine
+          command:
+            [
+              "sh",
+              "-c",
+              "until pg_isready -h $DB_HOST -p $DB_PORT -U $DB_USER; do echo Waiting for database; sleep 2; done;",
+            ]
+          env:
+            - name: DB_HOST
+              value: postgres.default.svc.cluster.local
+            - name: DB_PORT
+              value: "5432"
+            - name: DB_USER
+              value: admin
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: cluster-secrets
+                  key: POSTGRES_PASSWORD
       containers:
         - name: trace-demo
           image: registry.fullstack.pw/trace-demo:latest
@@ -27,15 +48,12 @@ spec:
             - name: DB_NAME
               value: postgres
             - name: DB_USER
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-credentials
-                  key: username
+              value: admin
             - name: DB_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: postgres-credentials
-                  key: password
+                  name: cluster-secrets
+                  key: POSTGRES_PASSWORD
           resources:
             limits:
               cpu: 200m
