--- a/apps/trace-demo/kustomize/overlays/prod/patches.yaml
+++ b/apps/trace-demo/kustomize/overlays/prod/patches.yaml
@@ -11,6 +11,9 @@ spec:
           env:
             - name: ENV
               value: "prod"
+            - name: DB_NAME
+              value: trace-demo-dev
+
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
