--- a/apps/trace-demo/kustomize/base/deployment.yaml
+++ b/apps/trace-demo/kustomize/base/deployment.yaml
@@ -23,7 +23,7 @@ spec:
             ]
           env:
             - name: DB_HOST
-              value: postgres.default.svc.cluster.local
+              value: postgres.fullstack.pw
             - name: DB_PORT
               value: "5432"
             - name: DB_USER
@@ -42,7 +42,7 @@ spec:
             - name: OTEL_EXPORTER_OTLP_ENDPOINT
               value: opentelemetry-collector.observability.svc.cluster.local:4317
             - name: DB_HOST
-              value: postgres.default.svc.cluster.local
+              value: postgres.fullstack.pw
             - name: DB_PORT
               value: "5432"
             - name: DB_NAME
