--- a/apps/trace-demo/kustomize/overlays/dev/patches.yaml
+++ b/apps/trace-demo/kustomize/overlays/dev/patches.yaml
@@ -11,6 +11,8 @@ spec:
           env:
             - name: ENV
               value: "dev"
+            - name: DB_NAME
+              value: trace-demo-dev
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
