--- a/apps/trace-demo/kustomize/overlays/dev/patches.yaml
+++ b/apps/trace-demo/kustomize/overlays/dev/patches.yaml
@@ -12,7 +12,7 @@ spec:
             - name: ENV
               value: "dev"
             - name: DB_NAME
-              value: trace-demo-dev
+              value: trace_demo_dev
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
