--- a/apps/trace-demo/kustomize/overlays/stg/patches.yaml
+++ b/apps/trace-demo/kustomize/overlays/stg/patches.yaml
@@ -12,7 +12,7 @@ spec:
             - name: ENV
               value: "stg"
             - name: DB_NAME
-              value: trace-demo-dev
+              value: trace_demo_stg
 
 ---
 apiVersion: networking.k8s.io/v1
