--- a/apps/enqueuer/kustomize/overlays/dev/kustomization.yaml
+++ b/apps/enqueuer/kustomize/overlays/dev/kustomization.yaml
@@ -5,23 +5,20 @@ patches:
   - patch: |-
       - op: replace
         path: /metadata/annotations/external-dns.alpha.kubernetes.io~1hostname
-        value: "dev.trace-demo.fullstack.pw"
+        value: "dev.enqueuer.fullstack.pw"
       - op: replace
         path: /spec/tls/0/hosts/0
-        value: "dev.trace-demo.fullstack.pw"
+        value: "dev.enqueuer.fullstack.pw"
       - op: replace
         path: /spec/rules/0/host
-        value: "dev.trace-demo.fullstack.pw"
+        value: "dev.enqueuer.fullstack.pw"
     target:
       kind: Ingress
-      name: trace-demo
+      name: enqueuer
   - patch: |-
       - op: replace
-        path: /spec/template/spec/containers/0/env/0/value
+        path: /spec/template/spec/containers/0/env/2/value
         value: "dev"
-      - op: replace
-        path: /spec/template/spec/containers/0/env/4/value
-        value: "trace_demo_dev"
     target:
       kind: Deployment
-      name: trace-demo
+      name: enqueuer
