--- a/apps/writer/kustomize/base/deployment.yaml
+++ b/apps/writer/kustomize/base/deployment.yaml
@@ -1,35 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: trace-demo
+  name: writer
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: trace-demo
+      app: writer
   template:
     metadata:
       labels:
-        app: trace-demo
+        app: writer
     spec:
       containers:
-        - name: trace-demo
-          image: registry.fullstack.pw/trace-demo:latest
+        - name: writer
+          image: registry.fullstack.pw/writer:latest
           ports:
             - containerPort: 8080
           env:
             - name: ENV
-              value: env
+              value: "env"
             - name: OTEL_EXPORTER_OTLP_ENDPOINT
               value: opentelemetry-collector.observability.svc.cluster.local:4317
-            - name: DB_HOST
-              value: postgres.fullstack.pw
-            - name: DB_PORT
-              value: "5432"
-            - name: DB_NAME
-              value: postgres
-            - name: DB_USER
-              value: admin
+            - name: QUEUE_NAMES
+              value: "test-queue"
+            - name: REDIS_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: cluster-secrets
+                  key: REDIS_PASSWORD
             - name: DB_PASSWORD
               valueFrom:
                 secretKeyRef:
