--- a/apps/writer/kustomize/base/ingress.yaml
+++ b/apps/writer/kustomize/base/ingress.yaml
@@ -1,27 +1,27 @@
-# manifests/trace-demo/ingress.yaml
+# manifests/writer/ingress.yaml
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: trace-demo
+  name: writer
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/proxy-body-size: "0"
-    external-dns.alpha.kubernetes.io/hostname: "trace-demo.fullstack.pw"
+    external-dns.alpha.kubernetes.io/hostname: "endpoint"
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
   ingressClassName: "traefik"
   tls:
     - hosts:
-        - "trace-demo.fullstack.pw"
-      secretName: trace-demo-tls
+        - "endpoint"
+      secretName: writer-tls
   rules:
-    - host: "trace-demo.fullstack.pw"
+    - host: "endpoint"
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: trace-demo
+                name: writer
                 port:
                   number: 80
