--- a/apps/writer/kustomize/overlays/prod/kustomization.yaml
+++ b/apps/writer/kustomize/overlays/prod/kustomization.yaml
@@ -5,23 +5,23 @@ patches:
   - patch: |-
       - op: replace
         path: /metadata/annotations/external-dns.alpha.kubernetes.io~1hostname
-        value: "stg.trace-demo.fullstack.pw"
+        value: "writer.fullstack.pw"
       - op: replace
         path: /spec/tls/0/hosts/0
-        value: "stg.trace-demo.fullstack.pw"
+        value: "writer.fullstack.pw"
       - op: replace
         path: /spec/rules/0/host
-        value: "stg.trace-demo.fullstack.pw"
+        value: "writer.fullstack.pw"
     target:
       kind: Ingress
-      name: trace-demo
+      name: writer
   - patch: |-
       - op: replace
         path: /spec/template/spec/containers/0/env/0/value
-        value: "stg"
+        value: "prod"
       - op: replace
-        path: /spec/template/spec/containers/0/env/4/value
-        value: "trace_demo_stg"
+        path: /spec/template/spec/containers/0/env/2/value
+        value: "queue-prod"
     target:
       kind: Deployment
-      name: trace-demo
+      name: writer
