--- a/apps/enqueuer/Dockerfile
+++ b/apps/enqueuer/Dockerfile
@@ -3,7 +3,7 @@ FROM golang:1.23.1
 WORKDIR /app
 
 # Copy go.mod and go.sum first to leverage Docker cache
-COPY enqueuer/main.go enqueuer/go.mod enqueuer/go.sum  shared ./
+COPY enqueuer/main.go enqueuer/go.mod enqueuer/go.sum  share/ ./
 
 # Download dependencies
 RUN go mod tidy
