--- a/apps/enqueuer/Dockerfile
+++ b/apps/enqueuer/Dockerfile
@@ -2,8 +2,9 @@ FROM golang:1.23.1
 
 WORKDIR /app
 
-# Copy go.mod and go.sum first to leverage Docker cache
-COPY enqueuer/main.go enqueuer/go.mod enqueuer/go.sum  share/ ./
+COPY share/ ./
+
+COPY enqueuer/main.go enqueuer/go.mod enqueuer/go.sum ./
 
 # Download dependencies
 RUN go mod tidy
