--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -41,7 +41,7 @@ jobs:
           APPS=()
 
           for FILE in $CHANGED_FILES; do
-            if [[ $FILE == apps/* ]]; then
+            if [[ $FILE == apps/* && $FILE != apps/shared/* ]]; then
               APP_PATH=$(echo $FILE | cut -d'/' -f1-2)
               APP_NAME=$(echo $FILE | cut -d'/' -f2)
               
@@ -78,8 +78,9 @@ jobs:
     name: Build and Push ${{ matrix.app.app_name }}
     uses: fullstack-pw/pipelines/.github/workflows/build-and-push.yml@main
     with:
-      app-context: "./${{ matrix.app.app_path }}"
+      app-context: "./apps"
       app-name: "${{ matrix.app.app_name }}"
+      app-dockerfile: "./apps/${{ matrix.app.app_name }}/Dockerfile"
 
   dev-deploy:
     needs: [determine-app, docker-build-and-push]
