--- a/apps/enqueuer/Dockerfile
+++ b/apps/enqueuer/Dockerfile
@@ -1,11 +1,43 @@
+# Update the Dockerfile for enqueuer
 FROM golang:1.23.1
+
+# Install Chrome dependencies
+RUN apt-get update && apt-get install -y \
+    wget \
+    gnupg \
+    ca-certificates \
+    fonts-liberation \
+    libasound2 \
+    libatk-bridge2.0-0 \
+    libatk1.0-0 \
+    libatspi2.0-0 \
+    libcups2 \
+    libdbus-1-3 \
+    libdrm2 \
+    libgbm1 \
+    libgtk-3-0 \
+    libnspr4 \
+    libnss3 \
+    libxcomposite1 \
+    libxdamage1 \
+    libxfixes3 \
+    libxkbcommon0 \
+    libxrandr2 \
+    xdg-utils \
+    --no-install-recommends
+
+# Install Chrome
+RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
+    && echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list \
+    && apt-get update \
+    && apt-get install -y google-chrome-stable --no-install-recommends \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
 COPY shared ./shared
 
 COPY enqueuer/main.go enqueuer/go.mod enqueuer/go.sum ./enqueuer/
-
 
 WORKDIR /app/enqueuer
 
@@ -18,6 +50,8 @@ RUN go build -o main .
 # Expose port 8080
 EXPOSE 8080
 
+# Tell Rod where to find Chrome
+ENV CHROME_PATH=/usr/bin/google-chrome
+
 # Run the application
 CMD ["./main"]
-#
