speed dev deploy

--- a/apps/writer/kustomize/overlays/dev/kustomization.yaml
+++ b/apps/writer/kustomize/overlays/dev/kustomization.yaml
@@ -12,3 +12,14 @@ patches:
     target:
       kind: Deployment
       name: writer
+  - patch: |-
+      - op: replace
+        path: /spec/strategy
+        value:
+          type: RollingUpdate
+          rollingUpdate:
+            maxSurge: 100%
+            maxUnavailable: 50%
+    target:
+      kind: Deployment
+      name: writer
