--- a/apps/enqueuer/kustomize/overlays/dev/kustomization.yaml
+++ b/apps/enqueuer/kustomize/overlays/dev/kustomization.yaml
@@ -22,3 +22,14 @@ patches:
     target:
       kind: Deployment
       name: enqueuer
+  - patch: |-
+      - op: replace
+        path: /spec/strategy
+        value:
+          type: RollingUpdate
+          rollingUpdate:
+            maxSurge: 100%
+            maxUnavailable: 50%
+    target:
+      kind: Deployment
+      name: enqueuer
